# TestApiReqres

./: .env  .gitignore  Dockerfile  Jenkinsfile  act_test.py  app.py  conftest.py  crud_request.py  docker-compose.yml  my_test.py  pyproject.toml  requirements.txt  settings.py  test.py  xm.xml
allure-results/: 025a9f7b-7ef1-43b4-b33e-f164ddf4031f-container.json  05e89956-04a9-4e85-8c4c-e59ad826cfdb-container.json  0c3e6cbb-f609-4251-8744-8a16e6f006b1-result.json  0c48cbfc-4056-40b4-9cd7-48bc2dd4d048-result.json  1cb6937a-b519-4524-980c-8bb07d1ba657-container.json  1f2479dd-c942-46bf-ab1c-e1e1c8bd1068-container.json  20f81d3c-c5e7-4746-b92e-0dabd3294996-result.json  220c9b43-8b6f-44bb-9793-10060b7f105d-result.json  2603cf3c-d499-478e-ba3a-31f0144a7587-container.json  2612a45b-82a7-41cf-af66-cd684282c68b-result.json  28030503-8fea-4ff3-a590-8cdd57dcbc15-result.json  2dc31bdb-1092-49f2-bddc-6a46b0656c9b-container.json  3015d290-dd2f-4309-9720-f6a731291f77-result.json  35b03cf0-e0eb-4362-8e09-410c8a130228-result.json  3c8bd249-fc5e-418a-b718-e9f0faa0ad38-container.json  413a8367-b6cc-4156-9f76-a2875292c1a5-container.json  47a399c0-48c9-44f1-8e4f-bdae25d9b3d6-result.json  4a12d4c6-ff9d-4185-b1d0-60a3d5832fa6-container.json  4a81e440-4d26-4c82-b9ed-eb3a23f38096-result.json  4e9bcc79-e1b9-43c2-9711-7232edfbb256-container.json  4fb791fe-0153-4365-9618-ef1767b24f5e-container.json  5da11398-afb9-43b3-93f8-405c0a43f477-container.json  667d00f9-6cd6-4c65-ba68-aa4b14a0c167-container.json  723cada8-69c4-4f07-9981-07779d3a72f6-container.json  (+21 more)
models/: questions.py
test/: test_api.py  (+2 more)
(+8 files in other folders)
