[tool.poetry]
name = "testapi"
version = "0.1.0"
description = ""
authors = ["Ilysikov <i_lysikov@bk.ru>"]
readme = "README.md"
pythonpath = [".","src"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.2"
httpx = "^0.27.0"
jsonschema = "^4.23.0"
pytest = "^8.3.2"
allure-pytest="2.13.5"
allure-python-commons="2.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "test"
addopts = [
    "--import-mode=importlib",
]
