[tool.poetry]
name = "testapi"
version = "0.1.0"
description = ""
authors = ["Ilysikov <i_lysikov@bk.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.2"
httpx = "^0.27.0"
jsonschema = "^4.23.0"
pytest = "^8.3.2"
allure-pytest="2.13.5"
allure-python-commons="2.13.5"
requests = "^2.28.1"
typing = "^3.7.4.3"
re = "^2.2.1"
random = "^0.12.2"
datetime = "^5.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".","src","test"]
addopts = [
    "--import-mode=importlib",
]
